# databoard

./: .gitignore  README.md  pyproject.toml  rxconfig.py
.devcontainer/: devcontainer.json
databoard/: databoard.py
databoard/components/: contact.py  gallery.py  header.py  navbar.py
databoard/pages/: index.py  trial.py
